test/classes/delete-free/bad-retain-error.2.good
bad-retain-error.chpl:13: In function 'main':
bad-retain-error.chpl:15: error: cannot adopt 'unmanaged B' (expected 'unmanaged A')
